--- a/css/index.css
+++ b/css/index.css
@@ -66,6 +66,21 @@ p {
     line-height: 1.4;
 }
 
+nav {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+header nav a:link, header nav a:active, header nav a:hover, header nav a:visited {
+    color: black;
+    text-decoration: none;
+}
+
+img {
+    margin-bottom: 25px;
+}
+
 .container {
     width: 800px;
     margin: 0 auto;
@@ -143,4 +158,44 @@ footer nav {
 footer nav a {
     color: white;
     text-decoration: none;
+}
+
+#box1 {
+    background-color: teal;
+}
+
+#box2 {
+    background-color: gold;
+}
+
+#box3{
+    background-color: cadetblue;
+}
+
+#box4{
+    background-color: coral;
+}
+
+#box5{
+    background-color: crimson;
+}
+
+#box6{
+    background-color: forestgreen;
+}
+
+#box7{
+    background-color: darkorchid;
+}
+
+#box8{
+    background-color: hotpink;
+}
+
+#box9{
+    background-color: indigo;
+}
+
+#box10{
+    background-color: dodgerblue;
 }
