--- a/css/index.css
+++ b/css/index.css
@@ -76,6 +76,7 @@ header nav a:link, header nav a:active, header nav a:hover, header nav a:visited
     color: black;
     text-decoration: none;
     font-size: 10pt;
+    padding-right: 40px;
 }
 
 img {
